# git-flow-action

./: .pylintrc  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  action.yml  codecov.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/agents/: isolated-test-runner.md
.github/workflows/: pipeline.yaml
src/: __init__.py  main.py  v2.py
tests/: conftest.py  test_git_flow_scenarios.py
tests/functional/: test_git_flow_scenarios.py
tests/unit/: test_changelog.py  test_git_operations.py
