[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "git-flow-action"
version = "0.1.0"
description = "GitHub Action for Git Flow versioning"
requires-python = ">=3.8"
dependencies = ["gitpython>=3.1.0", "semver>=3.0.0"]

[tool.setuptools]
packages = ["src"]
